Updated visibility:hidden to display:none to prevent gaps appearing.

--- a/assets/stylesheets/garnett.scss
+++ b/assets/stylesheets/garnett.scss
@@ -100,7 +100,7 @@ body {
 }
 
 .digipack__shots, .promotion-cta__image {
-  visibility: hidden;
+  display: none;
 }
 
 .digital-tablet-previews {
